...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" name="YP White"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N1x-QW-YYO" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button">
                                                        <accessibilityTraits key="traits" button="YES" selected="YES"/>
                                                    </accessibility>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="JYI-wY-WsW"/>
                                                        <constraint firstAttribute="height" constant="44" id="VGt-uf-gG1"/>
                                                    </constraints>
...
                                <rect key="frame" x="166.66666666666666" y="430.66666666666669" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="3AO-5U-ZVp"/>
                                    <constraint firstAttribute="width" constant="60" id="CVI-8F-ZYo"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="isp-4U-o7z">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate">
                                    <accessibilityTraits key="traits" button="YES" selected="YES"/>
                                </accessibility>
                                <constraints>
...
